--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,7 @@
 
 header {
 
-    @apply shadow-sm sticky top-0 py-7 bg-white z-20;    
+    @apply shadow-sm sticky bg-background top-0 py-7 z-20;   
 
     .container {
 
@@ -19,7 +19,19 @@ header {
 
             .nav-item {
 
-                @apply hover:text-primary cursor-pointer;
+                @apply hover:text-primary cursor-pointer text-secondary;
+
+            }
+
+        }
+
+        .theme-mode {
+
+            @apply p-2.5 px-5 bg-secondary rounded-full overflow-hidden flex items-center justify-center gap-1.5 text-white;
+
+            svg {
+
+                @apply h-5 text-white bg-transparent;
 
             }
 
