--- a/src/components/cardWrapper/CardWrapper.css
+++ b/src/components/cardWrapper/CardWrapper.css
@@ -34,6 +34,12 @@
 
             }
 
+            .price {
+
+                @apply text-secondary font-medium;
+                
+            }
+
             .cuisines, .res-loc {
 
                 @apply text-tertiary;
