--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -15,7 +15,7 @@ header {
     
         .nav-items {
 
-            @apply flex items-center gap-5 font-medium text-xl;
+            @apply hidden md:flex items-center gap-5 font-medium text-xl;
 
             .nav-item {
 
@@ -27,11 +27,11 @@ header {
 
         .theme-mode {
 
-            @apply p-2.5 px-5 bg-secondary rounded-full overflow-hidden flex items-center justify-center gap-1.5 text-white;
+            @apply py-2 px-4 bg-secondary rounded-full overflow-hidden flex items-center justify-center gap-1.5 text-white text-sm;
 
             svg {
 
-                @apply h-5 text-white bg-transparent;
+                @apply h-4 text-white bg-transparent;
 
             }
 
